--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "gsap": "^3.5.1",
     "postcss": "^7.0.35",
